[package]
name = "driver-adapters"
version = "0.1.0"
edition = "2021"

[features]
mysql = ["quaint/mysql"]
sqlite = ["quaint/sqlite"]
postgresql = ["quaint/postgresql"]

# napi-rs generated code has some cfg attributes that check for these features
# so we declare them here to silence the warnings. They should not be enabled.
noop = []
used_linker = []

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
once_cell = "1.15"
prisma-metrics.path = "../../libs/metrics"
serde.workspace = true
serde_json.workspace = true
telemetry.path = "../../libs/telemetry"
tracing.workspace = true
tracing-core = "0.1"
uuid.workspace = true
pin-project.workspace = true
serde_repr.workspace = true

[dev-dependencies]
expect-test = "1"
tokio = { version = "1", features = ["macros", "time", "sync"] }
wasm-rs-dbg.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
napi.workspace = true
napi-derive.workspace = true
quaint.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
quaint = { path = "../../quaint", default-features = false }
js-sys.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
tsify.workspace = true
