[package]
name = "json-rpc-stdio"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = "17"
tokio = { version = "1.0", features = ["io-std", "io-util"] }
tracing = "0.1.12"
