[package]
name = "prisma-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
futures.workspace = true
derive_more.workspace = true
metrics.workspace = true
metrics-util = "0.17.0"
metrics-exporter-prometheus = { version = "0.15.3", default-features = false }
once_cell = "1.3"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-futures = "0.2"
tracing-subscriber = "0.3.11"
parking_lot = "0.12"
pin-project.workspace = true

[dev-dependencies]
expect-test = "1"
tokio.workspace = true
