[package]
name = "prisma-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
futures.workspace = true
derive_more.workspace = true
metrics.workspace = true
metrics-util.workspace = true
metrics-exporter-prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
pin-project.workspace = true

[dev-dependencies]
expect-test = "1"
tokio.workspace = true
