[package]
name = "mongodb-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { git = "https://github.com/mongodb/mongo-rust-driver" }

# Remove these when mongo opens up their connection string parsing
percent-encoding = "2.0.0"
thiserror = "1"
once_cell = "1"
