[package]
name = "mongodb-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb.workspace = true

# Remove these when mongo opens up their connection string parsing
percent-encoding.workspace = true
thiserror.workspace = true
