[package]
name = "native-types"
version = "0.1.0"
authors = ["Marcus Böhm <wif.mboehm@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
once_cell = "1.3"
regex = "1.4"

[dev-dependencies]
anyhow = "1.0"
