[package]
name = "prisma-models"
version = "0.0.0"
authors = ["Dominic Petrick <petrick@prisma.io>", "Julius de Bruijn <bruijn@prisma.io>", "Marcus Böhm <boehm@prisma.io>", "Katharina Fey <kookie@spacekookie.de>" ]
edition = "2018"

[features]
default = []
sql-ext = ["quaint"]

[dependencies]
once_cell = "1.2"
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
debug_stub_derive = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
cuid = { git = "https://github.com/prisma/cuid-rust" }
chrono = { version = "0.4", features = ["serde"] }
failure = { version = "0.1", features = ["derive"] }
rand = "0.7"
datamodel = { path = "../datamodel/core" }
itertools = "0.8"
rust_decimal = "=1.1.0"
quaint = { git = "https://github.com/prisma/quaint", optional = true, features = ["uuid-0_8"] }
prisma-value = { path = "../prisma-value", features = ["sql-ext"] }
