[package]
authors = [
  "Dominic Petrick <petrick@prisma.io>",
  "Julius de Bruijn <bruijn@prisma.io>",
  "Marcus Böhm <boehm@prisma.io>",
  "Katharina Fey <kookie@spacekookie.de>",
]
edition = "2018"
name = "prisma-models"
version = "0.0.0"

[features]
default = []
sql-ext = ["quaint"]

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
cuid = {git = "https://github.com/prisma/cuid-rust"}
datamodel = {path = "../datamodel/core"}
itertools = "0.8"
once_cell = "1.3"
prisma-value = {path = "../prisma-value", features = ["sql-ext"]}
quaint = { git = "https://github.com/prisma/quaint", optional = true, features = ["uuid"] }
rand = "0.7"
bigdecimal = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
uuid = {version = "0.8", features = ["serde", "v4"]}
