[package]
authors = ["Marcus Böhm <boehm@prisma.io>"]
edition = "2021"
name = "prisma-value"
version = "0.1.0"

[features]
default = []

[dependencies]
base64 = "0.12"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.3"
regex = "1.2"
bigdecimal = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
uuid = { version = "1", features = ["serde"] }
