[package]
authors = ["Marcus Böhm <boehm@prisma.io>"]
edition = "2021"
name = "prisma-value"
version = "0.1.0"

[dependencies]
base64 = "0.12"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.3"
regex = "1.2"
bigdecimal = "0.3"
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
