[package]
name = "query-engine-common"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
url.workspace = true
query-connector = { path = "../../query-engine/connectors/query-connector" }
query-core = { path = "../../query-engine/core" }
telemetry = { path = "../telemetry" }
user-facing-errors = { path = "../user-facing-errors" }
serde_json.workspace = true
serde.workspace = true
connection-string.workspace = true
psl.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3" }
tracing-futures.workspace = true
tracing-opentelemetry = "0.17.3"
opentelemetry = { version = "0.17" }

[target.'cfg(all(not(target_arch = "wasm32")))'.dependencies]
prisma-metrics.path = "../metrics"
napi.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
tsify.workspace = true
