[package]
name = "query-engine-common"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
url.workspace = true
query-connector.workspace = true
query-core.workspace = true
telemetry.workspace = true
user-facing-errors.workspace = true
serde_json.workspace = true
serde.workspace = true
connection-string.workspace = true
psl.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-futures.workspace = true

[target.'cfg(all(not(target_arch = "wasm32")))'.dependencies]
prisma-metrics.workspace = true
napi.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
tsify-next.workspace = true
