[package]
name = "sql-connection"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.17"
datamodel = { path = "../datamodel/core" }
quaint = { git = "https://github.com/prisma/quaint.git" }
tokio = "0.2.0-alpha.6"
url = "1.7.0"
