[package]
name = "sql-ddl"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
postgres = []
mysql = []
sqlite = []
mssql = []
default = ["postgres", "mysql", "sqlite", "mssql"]

[dependencies]

[dev-dependencies]
indoc = "1.0"