[package]
authors = ["Arve Knudsen <arve.knudsen@gmail.com>"]
edition = "2018"
name = "sql-schema-describer"
version = "0.1.0"

[dependencies]
native-types = {path = "../native-types"}
prisma-value = {path = "../prisma-value"}

async-trait = "0.1.17"
bigdecimal = "0.2"
enumflags2 = "0.7"
indoc = "1"
once_cell = "1.3"
regex = "1.2"
serde = "1"
serde_json = "1.0"
tracing = "0.1"
tracing-error = "0.1.2"
tracing-futures = "0.2.4"

[dependencies.quaint]
git = "https://github.com/prisma/quaint"
features = [
    "chrono",
    "sqlite",
    "postgresql",
    "mysql",
    "mssql",
    "bigdecimal"
]

[dev-dependencies]
barrel = { git = "https://github.com/prisma/barrel.git", features = ["sqlite3", "mysql", "pg", "mssql"], branch = "mssql-support" }
pretty_assertions = "0.6"
test-macros = { path = "../test-macros" }
test-setup = { path = "../test-setup" }
tokio = { version = "1.0", default_features = false, features = ["macros"] }
