[package]
name = "sql-schema-describer"
version = "0.1.0"

[dependencies]
native-types = { path = "../native-types" }
prisma-value = { path = "../prisma-value" }

async-trait = "0.1.17"
bigdecimal = "0.3"
enumflags2 = "0.7"
indexmap = { version = "1.9.1", default_features = false }
indoc = "1"
once_cell = "1.3"
regex = "1.2"
serde.workspace = true
serde_json.workspace = true
tracing = "0.1"
tracing-error = "0.2"
tracing-futures = "0.2"
quaint.workspace = true

[dev-dependencies]
expect-test = "1.2.2"
pretty_assertions = "0.6"
test-macros = { path = "../test-macros" }
test-setup = { path = "../test-setup" }
tokio.workspace = true
