[package]
edition = "2021"
name = "telemetry"
version = "0.1.0"

[features]
metrics = []

[dependencies]
opentelemetry = { version = "0.17.0", features = ["rt-tokio", "serialize"] }
serde.workspace = true
serde_json.workspace = true
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "time"] }
tracing = { workspace = true, features = ["attributes"] }
tracing-futures.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.17.4"
crosstarget-utils = { path = "../crosstarget-utils" }
enumflags2.workspace = true
derive_more.workspace = true

[dev-dependencies]
insta = { version = "1.41", features = ["redactions", "ron"] }
