[package]
edition = "2021"
name = "telemetry"
version = "0.1.0"

[dependencies]
ahash = "0.8.11"
serde.workspace = true
serde_json.workspace = true
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "time"] }
tracing = { workspace = true, features = ["attributes"] }
tracing-futures.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crosstarget-utils = { path = "../crosstarget-utils" }
enumflags2.workspace = true
derive_more.workspace = true

[target.'cfg(not(target_arch = "wasm32-unknown-unknown"))'.dependencies]
rand.workspace = true

[dev-dependencies]
insta = { version = "1.41", features = ["redactions", "ron"] }
