[package]
name = "test-cli"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.26"
colored = "2"
structopt = "0.3.8"
enumflags2 = "0.7"
migration-core = { path = "../../migration-engine/core" }
migration-connector = { path = "../../migration-engine/connectors/migration-connector" }
introspection-core = { path = "../../introspection-engine/core" }
introspection-connector = { path = "../../introspection-engine/connectors/introspection-connector" }
datamodel = { path = "../../libs/datamodel/core" }
tokio = "1.0"
serde_json = { version = "1.0", features = ["float_roundtrip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tracy = "0.8"
tracing-error = "0.2"
tracing-opentelemetry = "0.16"
tracing-futures = "0.2"
opentelemetry = { version = "0.16", features = ["async-std", "rt-async-std"] }
opentelemetry-jaeger = { version = "0.15", features = ["rt-tokio", "reqwest_collector_client"] }
