[package]
name = "test-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.26"
colored = "2"
structopt = "0.3.8"
enumflags2.workspace = true
dmmf = { path = "../../query-engine/dmmf" }
schema-core = { path = "../../schema-engine/core" }
schema-connector = { path = "../../schema-engine/connectors/schema-connector" }
psl.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
async-trait.workspace = true

[build-dependencies]
build-utils.path = "../build-utils"
