[package]
name = "test-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
colored = "2"
structopt.workspace = true
enumflags2.workspace = true
dmmf.workspace = true
schema-core.workspace = true
schema-connector.workspace = true
psl.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
async-trait.workspace = true

[build-dependencies]
build-utils.workspace = true
