[package]
name = "test-macros"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.10.1"
syn = "1.0.5"
quote = "1.0.2"
proc-macro2 = "1.0.6"
test-setup = { path = "../test-setup" }
