[package]
name = "test-macros"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test-setup = { path = "../test-setup" }

darling = "0.10.1"
enumflags2 = "0.6.0"
once_cell = "1.3.1"
proc-macro2 = "1.0.6"
quote = "1.0.2"
syn = "1.0.5"
