[package]
name = "test-setup"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2021"

[dependencies]
connection-string = "0.1.10"
dissimilar = "1.0.3"
enumflags2 = "0.7"
once_cell = "1.3.1"
tokio = { version = "1.0", optional = true, features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2.1.1"

[dependencies.quaint]
git = "https://github.com/prisma/quaint"
optional = true
features = [
    "postgresql",
    "mysql",
    "mssql",
    "sqlite",
    "json",
    "uuid",
    "chrono",
    "bigdecimal",
]

[features]
default = ["sql"]
sql = ["quaint", "tokio"]
