[package]
name = "test-setup"
version = "0.1.0"
edition = "2021"

[dependencies]
connection-string.workspace = true
dissimilar = "1.0.3"
enumflags2.workspace = true
once_cell = "1.3.1"
tokio = { workspace = true, optional = true }
tracing.workspace = true
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url.workspace = true
quaint = { workspace = true, optional = true }

[features]
default = ["sql"]
sql = ["quaint", "tokio"]
