[package]
name = "test-setup"
version = "0.1.0"
edition.workspace = true

[dependencies]
connection-string.workspace = true
dissimilar.workspace = true
enumflags2.workspace = true
tokio = { workspace = true, optional = true }
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
url.workspace = true
quaint = { workspace = true, optional = true }

[features]
default = ["sql"]
sql = ["quaint", "tokio"]
