[package]
name = "user-facing-error-macros"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "0.10.1"
syn = "1.0.5"
quote = "1.0.2"
proc-macro2 = "1.0.6"
once_cell = "1.3"
regex = "1.3.1"
