[package]
name = "user-facing-errors"
version = "0.1.0"
edition = "2021"

[dependencies]
user-facing-error-macros = { path = "../user-facing-error-macros" }
serde_json.workspace = true
serde.workspace = true
backtrace = "0.3.40"
tracing = "0.1"
indoc.workspace = true
itertools.workspace = true
quaint = { path = "../../quaint", optional = true, default-features = false, features = ["sqlite"] }

[features]
default = []
sql = ["quaint"]
