[package]
name = "user-facing-errors"
version = "0.1.0"
edition = "2021"

[dependencies]
user-facing-error-macros = { path = "../user-facing-error-macros" }
serde_json.workspace = true
serde.workspace = true
backtrace = "0.3.40"
tracing.workspace = true
indoc.workspace = true
itertools.workspace = true
quaint = { path = "../../quaint", default-features = false, optional = true }

[features]
default = []
sql = ["quaint"]
all-native = [
    "postgresql-native",
    "mssql-native",
    "mysql-native",
    "sqlite-native",
]
postgresql-native = ["quaint/postgresql-native"]
mssql-native = ["quaint/mssql-native"]
mysql-native = ["quaint/mysql-native"]
sqlite-native = ["quaint/sqlite-native"]
