[package]
name = "user-facing-errors"
version = "0.1.0"
edition = "2021"

[dependencies]
panic-utils.workspace = true
user-facing-error-macros.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true
indoc.workspace = true
itertools.workspace = true
quaint = { workspace = true, optional = true }

[features]
default = []
sql = ["quaint"]
all-native = [
    "postgresql-native",
    "mssql-native",
    "mysql-native",
    "sqlite-native",
]
postgresql-native = ["quaint/postgresql-native"]
mssql-native = ["quaint/mssql-native"]
mysql-native = ["quaint/mysql-native"]
sqlite-native = ["quaint/sqlite-native"]
