[package]
name = "migration-engine-cli"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration-core = { path = "../core" }
user-facing-errors = { path = "../../libs/user-facing-errors" }

enumflags2 = "0.6.0"
json-rpc-stdio = { path = "../../libs/json-rpc-stdio" }
pico-args = { version = "0.4.1", default-features = false }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
tokio = { version = "1.0", default-features = false, features = ["macros"] }
tracing = "0.1"
tracing-error = "0.1.2"
tracing-subscriber = { version = "0.2", default-features = false, features = ["json", "smallvec", "tracing-log", "parking_lot"] }

[dev-dependencies]
tempfile = "3.1.0"
test-setup = { path = "../../libs/test-setup" }
test-macros = { path = "../../libs/test-macros" }
enumflags2 = "*"
url = "2.1.1"
quaint = { git = "https://github.com/prisma/quaint" }

[features]
default = ["sql"]
sql = ["migration-core/sql"]
vendored-openssl = ["quaint/vendored-openssl"]

[[bin]]
name = "migration-engine"
path = "src/main.rs"
