[package]
name = "migration-engine-cli"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration-connector = { path = "../connectors/migration-connector" }
migration-core = { path = "../core", features = ["sql", "mongodb"] }
user-facing-errors = { path = "../../libs/user-facing-errors" }

backtrace = "0.3.59"
base64 = "0.13"
json-rpc-stdio = { path = "../../libs/json-rpc-stdio" }
structopt = "0.3.8"
tokio = { version = "1.0", default-features = false, features = ["macros"] }
tracing = "0.1"
tracing-error = "0.1.2"
tracing-subscriber = "0.2"

[dev-dependencies]
tempfile = "3.1.0"
test-setup = { path = "../../libs/test-setup" }
test-macros = { path = "../../libs/test-macros" }
url = "2.1.1"
connection-string = "0.1"

[dev-dependencies.quaint]
git = "https://github.com/prisma/quaint"

[features]
default = ["sql"]
sql = ["migration-core/sql"]
vendored-openssl = ["quaint/vendored-openssl"]

[[bin]]
name = "migration-engine"
path = "src/main.rs"
