[package]
name = "migration-engine-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
migration-connector = { path = "../connectors/migration-connector" }
migration-core = { path = "../core" }
user-facing-errors = { path = "../../libs/user-facing-errors" }

backtrace = "0.3.59"
base64 = "0.13"
json-rpc-stdio = { path = "../../libs/json-rpc-stdio" }
structopt = "0.3.8"
tokio.workspace = true
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = [ "fmt", "json", "time", "env-filter" ] }
serde_json = "1.0.74"

[dev-dependencies]
tempfile = "3.1.0"
test-setup = { path = "../../libs/test-setup" }
test-macros = { path = "../../libs/test-macros" }
url = "2.1.1"
connection-string = "0.1"
quaint.workspace = true

[[bin]]
name = "migration-engine"
path = "src/main.rs"

[features]
vendored-openssl = ["migration-core/vendored-openssl"]
